# argentum-online-server

./: .gitattributes  .gitignore  1.txt  2.txt  AOGuard.ini  AntiCheats.ini  CAMBIOS.txt  CODE_OF_CONDUCT.md  COMCTL32.oca  CONTRIBUTING.md  ClienteMD5.txt  Configuracion.ini  ConfiscarCarcel.ini  Database.db  Database.ini.example  Database.ini.sample  Database_old.ini  Ejemplo.Server.ini  Empty_db.db  Example.Configuracion.ini  Example.EsArbol.ini  Example.Server.ini  Example.feature_toggle.ini  Example.pescaGold.ini  ItemVenta.txt  LanzadorAutomatico.bat  OPEN_SERVER_PROCDUMP.bat  PacketRatePolicy.ini  Partitions.ini  README.md  Ranking - copia.ini  Ranking.ini  RegistrarAurora.bat  RegistrarEvento.bat  Reset.md  Server - Para Produccion.ini  Server.VBP  Server.ini  Server.ini.produccion  Server.ini.staging  (+20 more)
.github/: ai-fix-retry.yml  ai-fix.yml
Codigo/: AI_NPC.bas  AIv2.bas  AO20CryptoSysWrapper.bas  AOGuard.bas  API.bas  Acciones.bas  Admin.bas  AntiCheat.bas  ApiConnection.bas  ApplyEffectOnHit.cls  ApplyEffectOnParty.cls  AutomatedActions.bas  BanTemporal.bas  CSHA256.cls  CharacterPersistence.bas  Characters.bas  Cls_InterGTC.cls  Comercio.bas  Consts.bas  ConsultasPopulares.cls  CustomMaps.bas  CustomScenarios.bas  DatabaceGlobals.bas  DatabaseGlobals.bas  Database_Queries.bas  Declares.bas  DisconnectDiagnostics.bas  DrunkEffect.cls  EditorCharsGonzaM.vbp  EffectProvoke.cls  EffectProvoked.cls  EffectsOverTime.bas  EventNpcDefinition.cls  FileIO.bas  Form1.frm  FrmInterv.frm  FrmStat.frm  GUIDgenerator.bas  GameLogic.bas  General.bas  (+186 more)
Documentation/: AI_NPC.md  AI_NPC.mmd  AO20CryptoSysWrapper.md  AO20CryptoSysWrapper.mmd  API.md  Admin.md  Admin.mmd  CharacterPersistence.md  CharacterPersistence.mmd  Comercio.md  Comercio.mmd  Database_Queries.md  Database_Queries.mmd  EffectsOverTime.md  EffectsOverTime.mmd  GameLogic.md  (+5 more)
Extras/AOLibrary/: CMakeLists.txt
Extras/AOLibrary/src/: callback.cpp
Extras/AOLibrary/src/include/: declares.h
(+280 files in other folders)
